[package]
authors = ["Usagi Ito <the@usagi.network>"]
categories = ["science"]
description = "LonLat and LonLatAlt geo-location types and utils."
edition = "2018"
keywords = ["lonlat", "geouri", "lonlatalt", "dms", "japanese"]
license = "MIT"
name = "lonlat"
readme = "README.md"
repository = "https://github.com/usagi/lonlat"
version = "1.0.0"

[features]
default = []
ja-JP = [] # Additional language support for Japanese such as "東経141度21分15.8秒" eq to "141°21′15.8″E"

[dependencies]
approx = "0.3.2"
arithmetic-sign = "1.0.0"
lazy_static = "1.4.0"
measurements = "0.10.3"
regex = "1.3.9"
thiserror = "1.0.20"
